move jekyll up one level

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
 
   <body>
 
+  {% if page.showheader == true %}
     {% include header.html %}
+  {% endif %}
 
     <div class="page-content">
       <div class="wrapper">
