--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
   {% endif %}
 
     <div class="page-content">
-      <div class="wrapper">
+     <!--  <div class="wrapper"> -->
         {{ content }}
-      </div>
+     <!--  </div> -->
     </div>
 
     {% include footer.html %}
