new posts and gitignore file added

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -33,5 +33,6 @@ $on-laptop:        800px;
         "media-queries",
         "general",
         "header",
-        "home"
+        "home",
+        "blog"
 ;
