--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -9,8 +9,17 @@
 	}
 }
 .category{
-	font-size:17px;
-	text-transform:uppercase;
-	font-weight:400;
-	letter-spacing:0.08em;
+	p{
+		font-size:17px;
+		text-transform:uppercase;
+		font-weight:400;
+		letter-spacing:0.08em;
+	}
+	ul{
+		li{
+			&:first-child{
+				display:none;
+			}
+		}
+	}
 }
