--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,10 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,300);
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 $base-font-family: 					'Lato', Arial, sans-serif;
 $header-font-family: 				'roboto slab', serif;
+
+
 
 
 $base-font-size:   16px;
